--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
         pip install requests
     - name: Test
       run: |
-        python -list
+        pip list
     - name: download tools.py
       shell: python
       run: |
