--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -56,18 +56,13 @@ jobs:
           f.write(res.content)
         tools = reload_module("tools", path=os.environ["FILE_PATH"])
         result = tools.meiriyiwen(new=True).print(False)
-        with open("{}result.txt".format(os.environ["FILE_PATH"]), 'w', encoding="utf8") as f:
-          f.write(result)
+        tools.sendmail(os.environ["username"], os.environ["password"], os.environ["smtp_host"], os.environ["smtp_port"],
+          os.environ["send_to"], os.environ["subject"], result)
       env:
         FILE_PATH: ${{ github.workspace }}/.github/
-    - name: Send mail
-      uses: dawidd6/action-send-mail@v2
-      with:
-        server_address: smtp.163.com
-        server_port: 465
         username: ${{secrets.EMAIL_NAME}}
         password: ${{secrets.EMAIL_PASSWORD}}
-        subject: Github Actions job result
-        body: file://.github/result.txt
-        to: qa455355@163.com
-        from: GitHub Actions
+        smtp_host: smtp.163.com
+        smtp_port: 465
+        subject: Github Actions
+        send_to: qa455355@163.com
