--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -58,7 +58,7 @@ jobs:
         with open(_path, 'wb') as f:
           f.write(res.content)
         _path = os.path.join(os.environ["FILE_PATH"], ".github")
-        tools = reload_module("tools", path=_path)
+        tools = reload_module("tools", path=_path, raise_=True)
         result = tools.meiriyiwen(new=True).print(False)
         # How to use the secrets variable directly in the code here? (Without `env:`.)
         tools.sendmail(os.environ["username"], os.environ["password"], os.environ["smtp_host"], os.environ["smtp_port"],
